Changes for 3.4.5rc1

New features:
..F....... [ZBX-12809] implemented overlay dialog centering using javascript (miks)

Bug fixes:
........S. [ZBX-13027] fixed floating range validation during conversion from uint64 to float (wiper)
........S. [ZBX-12975] fixed possibility of foreign key constraint failure due to events being removed before trigger data storage period expires (vso)
........S. [ZBX-11426] fixed potentially incorrect delete procedure for problems and events (abs)
....I..... [ZBX-12895] improved performance of DB patch for updating data in the alerts table (Sergejs)
........S. [ZBX-12971] fixed possibility of host availability being stuck in unknown state when monitoring though proxy (vso)
.......P.. [ZBX-12971] fixed Zabbix proxy not to send same host availability more than once (vso)
........S. [ZBX-12800] fixed incorrect trigger dependency calculation when processing dependent triggers in the same history syncer batch (wiper)
A......... [ZBX-10754] fixed inheritance of template properties in web scenarios (miks)
..F....... [ZBX-12926] fixed translation string on administration general housekeeping page (gcalenko)
..F....... [ZBX-12738] added missing key "vfs.dir.size" for active agent in item edit form (gcalenko)
..F....... [ZBX-12856] fixed wrong default value for host filter when adding dependent trigger in trigger edit form (gcalenko)
..F....... [ZBX-12082] fixed possibility to select triggers with same name in multiselect (Ivo)
........S. [ZBX-9567] added missing fields to webscenario data handling (valdis)
..F....... [ZBX-11051] fixed displaying highest severity when dashboard filter options contain unacknowledged only (Ivo)
........S. [ZBX-12978] improved performance of preprocessor manager, alert manager/worker, IPMI manager/poller by reducing frequency of log rotation checks that handle stdout/stderr (vso)
........S. [ZBX-12936] improved SQL performance by updating proxy last access in bulks (vso)