@@ -26,8 +26,8 @@ class CControllerScriptCreate extends CController {
 			'name' =>					'db scripts.name',
 			'type' =>					'db scripts.type        |in '.ZBX_SCRIPT_TYPE_CUSTOM_SCRIPT.','.ZBX_SCRIPT_TYPE_IPMI,
 			'execute_on' =>				'db scripts.execute_on  |in '.ZBX_SCRIPT_EXECUTE_ON_AGENT.','.ZBX_SCRIPT_EXECUTE_ON_SERVER.','.ZBX_SCRIPT_EXECUTE_ON_PROXY,
-			'command' =>				'db scripts.command',
-			'commandipmi' =>			'db scripts.command',
+			'command' =>				'db scripts.command     |flags '.P_CRLF,
+			'commandipmi' =>			'db scripts.command     |flags '.P_CRLF,
 			'description' =>			'db scripts.description',
 			'host_access' =>			'db scripts.host_access |in 0,1,2,3',
 			'groupid' =>				'db scripts.groupid',
